<resources>
    <string name="app_name">SureOutdoor</string>
    <string name="info_principal">¡Hola Pedro! Esta es la cantidad de pasos que llevas hoy…</string>
    <string name="return_description">Vuelve</string>
    <string name="setting_description">Config</string>
    <string name="paso_comp">6507 pasos completados</string>
    <string name="text_dem">Te faltan 3493 para completar tu meta, ¡vamos que sí se puede!</string>
    <string name="curious">Dato curioso: has completado 32 viajes ida y vuelta a la luna, ya eres todo un astronauta</string>
    <string name="icon">iconoX</string>
    <string name="homeIcon">Inicio</string>
    <string name="placesIcon">Lugares</string>
    <string name="mapIcon">Mapa</string>
    <string name="plansIcon">Planes</string>
    <string name="groupIcon">Grupal</string>
    <string name="name">Nombre:</string>
    <string name="photo_info">Foto del usuario</string>
    <string name="last_name">Apellido:</string>
    <string name="email">Correo electrónico:</string>
    <string name="age">Edad:</string>
    <string name="nom_prueba">Pedro</string>
    <string name="apellido_prueba">Martinez</string>
    <string name="correo_prueba">pedritoma@gmail.com</string>
    <string name="edad_prueba">28</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="plan_txt">Nombre del plan:</string>
    <string name="lugar_txt">Lugar:</string>
    <string name="fecha_txt">Fecha:</string>
    <string name="hora_txt">Hora:</string>
    <string name="friends_send">Enviar solo a mis amigos</string>
    <string name="all_send">Enviar a la plataforma</string>
    <string name="name_ing">Plan</string>
    <string name="place_elec">Lugar</string>
    <string name="calendar_elec">Fecha</string>
    <string name="hour_elec">Hora</string>
    <string name="filter_text">Filtros</string>
    <string name="gym_a">Gimnasio A</string>
    <string name="park_b">Parque B</string>
    <string name="store_c">Tienda C</string>
    <string name="dist_a">4Km</string>
    <string name="dist_b">3Km</string>
    <string name="dist_c">6Km</string>
    <string name="gymButt">gymButton</string>
    <string name="strButt">storeButton</string>
    <string name="prkButt">parkButton</string>
    <string name="ratingStars">rating</string>
    <string name="review">Añadir una reseña</string>
    <string name="gym_icon">iconogym</string>
    <string name="park_icon">iconoparque</string>
    <string name="store_icon">iconotienda</string>
    <string name="textRef">Imagen de referencia para la reseña</string>
    <string name="ref">Descripción:</string>
    <string name="refe">Opinión del sitio</string>
    <string name="sitName">Nombre del sitio:</string>
    <string name="sitn">Lugar X</string>
    <string name="califp">Calificación:</string>
    <string name="sendCalif">Compartir reseña</string>
    <string name = "google_maps_key" templateMergeStrategy = "preserve" translatable="false"> AIzaSyBfUfwlU3e-09HGEGsdt1mSg9juN2dszTA </string>
</resources>