<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/up_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/name_company"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="italic|bold"/>

    <ImageButton
        android:id="@+id/returnButton"
        android:layout_width="70dp"
        android:layout_height="54dp"
        android:background="@color/orange"
        android:contentDescription="@string/return_description"
        app:srcCompat="@mipmap/ic_returnn_foreground" />

    <ImageButton
        android:id="@+id/person_image"
        android:layout_width="170dp"
        android:layout_height="184dp"
        android:layout_below="@+id/up_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:contentDescription="@string/photo_info"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/name_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/person_image"
        android:textColor="@color/black"
        android:text="@string/name"/>
    <TextView
        android:id="@+id/last_name_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_person"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:text="@string/last_name"/>
    <TextView
        android:id="@+id/email_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_name_person"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:text="@string/email"/>
    <TextView
        android:id="@+id/age_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_person"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:text="@string/age"/>

    <TextView
        android:id="@+id/name_ej"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/person_image"
        android:layout_marginStart="80dp"
        android:text="@string/nom_prueba"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/last_name_ej"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_ej"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:text="@string/apellido_prueba" />
    <TextView
        android:id="@+id/email_ej"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_name_ej"
        android:layout_marginStart="130dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:text="@string/correo_prueba" />
    <TextView
        android:id="@+id/age_ej"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_name_ej"
        android:layout_marginStart="60dp"
        android:layout_marginTop="80dp"
        android:textColor="@color/black"
        android:text="@string/edad_prueba" />

    <Button
        android:id="@+id/editProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/person_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/edit_profile"
        android:theme="@style/ThemeOverlay.Material3.DynamicColors.Light" />


</RelativeLayout>