<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".GroupActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/up_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/name_company"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="italic|bold"/>

    <ImageButton
        android:id="@+id/returnButton"
        android:layout_width="70dp"
        android:layout_height="54dp"
        android:background="@color/orange"
        android:contentDescription="@string/return_description"
        app:srcCompat="@mipmap/ic_returnn_foreground" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="59dp"
        android:layout_height="53dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="3dp"
        android:background="@color/orange"
        android:contentDescription="@string/setting_description"
        app:srcCompat="@mipmap/ic_settings_foreground" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/down_toolbar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="47dp"
        android:background="@color/orange"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="66dp"
        android:layout_height="54dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="34dp"
        android:background="@color/orange"
        android:contentDescription="@string/icon"
        app:srcCompat="@mipmap/ic_home_foreground"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/mapButton"
        android:layout_width="61dp"
        android:layout_height="62dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:background="@color/orange"
        android:contentDescription="@string/icon"
        app:srcCompat="@mipmap/ic_map_foreground"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/groupButton"
        android:layout_width="52dp"
        android:layout_height="64dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="27dp"
        android:background="@color/orange"
        android:contentDescription="@string/icon"
        app:srcCompat="@mipmap/ic_group_foreground"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/placesButton"
        android:layout_width="60dp"
        android:layout_height="65dp"
        android:layout_marginStart="90dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:background="@color/orange"
        android:contentDescription="@string/icon"
        app:srcCompat="@mipmap/ic_places_foreground"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/chatsButton"
        android:layout_width="61dp"
        android:layout_height="64dp"
        android:layout_marginStart="250dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:background="@color/orange"
        android:contentDescription="@string/icon"
        app:srcCompat="@mipmap/ic_plans_foreground"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/home_text"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/homeIcon"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/places_text"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/placesIcon"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/map_text"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/mapIcon" />

    <TextView
        android:id="@+id/chats_text"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="250dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/plansIcon" />

    <TextView
        android:id="@+id/group_text"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/groupIcon" />

    <TextView
        android:id="@+id/plan_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/up_toolbar"
        android:layout_marginTop="30dp"
        android:text="@string/plan_txt"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/plan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/up_toolbar"
        android:layout_marginStart="210dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name_ing"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/place_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/up_toolbar"
        android:layout_marginTop="90dp"
        android:text="@string/lugar_txt"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/place_name"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/up_toolbar"
        android:layout_marginStart="100dp"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/place_elec"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/up_toolbar"
        android:layout_marginTop="170dp"
        android:text="@string/fecha_txt"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/date_ele"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/up_toolbar"
        android:layout_marginStart="100dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/calendar_elec"
        android:inputType="date"
        android:minHeight="48dp"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/up_toolbar"
        android:layout_marginTop="250dp"
        android:text="@string/hora_txt"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/time_ele"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/up_toolbar"
        android:layout_marginStart="100dp"
        android:layout_marginTop="232dp"
        android:ems="10"
        android:hint="@string/hour_elec"
        android:importantForAutofill="no"
        android:inputType="time"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/onlyFriendsButton"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="96dp"
        android:text="@string/friends_send"
        android:theme="@style/ThemeOverlay.Material3.DynamicColors.Light" />

    <Button
        android:id="@+id/sendAllButton"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="210dp"
        android:layout_marginBottom="96dp"
        android:text="@string/all_send"
        android:theme="@style/ThemeOverlay.Material3.DynamicColors.Light" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapViewCreate"
        android:layout_width="298dp"
        android:layout_height="173dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="169dp"
        tools:ignore="SpeakableTextPresentCheck" />


</RelativeLayout>