<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".NewProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/up_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/name_company"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="italic|bold"/>

    <ImageButton
        android:id="@+id/returnButton"
        android:layout_width="70dp"
        android:layout_height="54dp"
        android:background="@color/orange"
        android:contentDescription="@string/return_description"
        app:srcCompat="@mipmap/ic_getout_foreground" />

    <ImageView
        android:id="@+id/person_image"
        android:layout_width="170dp"
        android:layout_height="184dp"
        android:layout_below="@+id/up_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/red"
        android:contentDescription="@string/photo_info"
        android:visibility="visible"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/name_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/person_image"
        android:text="@string/name"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/last_name_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_person"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:text="@string/last_name"/>

    <TextView
        android:id="@+id/email_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_name_person"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/age_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_person"
        android:layout_marginTop="30dp"
        android:text="@string/age"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/persont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_person"
        android:layout_marginTop="84dp"
        android:text="Meta"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/name_ej"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/person_image"
        android:layout_marginStart="80dp"
        android:autofillHints="Pedro"
        android:inputType="text"
        android:text="@string/nom_prueba"
        android:textColor="@color/black"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/last_name_ej"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/name_ej"
        android:layout_marginStart="80dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/apellido_prueba"
        android:textColor="@color/black"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/email_ej"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/last_name_ej"
        android:layout_marginStart="130dp"
        android:text="@string/correo_prueba"
        android:textColor="@color/black"
        tools:ignore="TouchTargetSizeCheck"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/age_ej"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_below="@+id/last_name_ej"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/edad_prueba"
        android:textColor="@color/black"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/newGoal"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_below="@+id/last_name_ej"
        android:layout_marginStart="60dp"
        android:layout_marginTop="104dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="2000"
        android:textColor="@color/black"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/editProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/person_image"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="257dp"
        android:layout_marginEnd="123dp"
        android:text="Guardar cambios"
        android:theme="@style/ThemeOverlay.Material3.DynamicColors.Light" />


</RelativeLayout>